# galaxy-brain

./: .bazelignore  .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  agent.py  bazel-bin  bazel-galaxy-brain  bazel-out  bazel-testlogs  complex_email.txt  data_processing_demo.py  demo_galaxy_brain.py  demo_simple_models.py  final_demo.py  galaxy-brain-concept.md  main.py  models.py  pyproject.toml  requirements_lock.txt  single_email.txt  test_demo.py  triage.py
apps/api_service/: BUILD.bazel
apps/api_service/src/: api_server.py
apps/batch_processor/: BUILD.bazel
apps/batch_processor/src/: processor.py
bazel/: BUILD.bazel  hf_repository.bzl
ml_pipelines/: BUILD.bazel  requirements_lock.txt  sample_emails.txt
ml_pipelines/eval_sentiment_model/: eval_script.py
ml_pipelines/train_ner_model/: training_script.py
tools/dev_scripts/: BUILD.bazel  dev_setup.py  download_models.py
